# DSA_Project_2_algo_evolution

./: .gitignore  CMakeLists.txt  README.md  crazy.txt  file.txt
DSA_Project_2_algo_evolution-main/: CMakeLists.txt  README.md
DSA_Project_2_algo_evolution-main 3/: README.md
DSA_Project_2_algo_evolution-main/data/logs/: massive_evolution.csv  viral_data.csv
DSA_Project_2_algo_evolution-main/include/: dna.hpp  evaluator.hpp  metrics.hpp  sa.hpp
DSA_Project_2_algo_evolution-main/scripts/: regenerate_logs.sh
DSA_Project_2_algo_evolution-main/src/: datasets.cpp  evaluator.cpp  ga.cpp  logging.cpp  main_experiment.cpp  massive_demo.cpp  massive_html_gen.cpp  mergesort.cpp  quicksort.cpp  sa.cpp
DSA_Project_2_algo_evolution-main/viz/: style.css  viz.js
data/: sample_qs_ga.csv
data/logs/: demo_qs_ms.csv  full_test.csv
include/: common.hpp  datasets.hpp  dna.hpp  ga.hpp  logging.hpp  mergesort.hpp  quicksort.hpp  viz.hpp
scripts/: download_kaggle.py
src/: datasets.cpp  ga.cpp  instant_demo.cpp  main_experiment.cpp  mergesort.cpp  quicksort.cpp  test_correctness.cpp  viz_sfml.cpp  viz_utils.cpp
viz/: index.html
